一件开薅功能，记录刷新时间用于减少请求

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,16 +3,17 @@
 @import './transition.scss';
 
 //ui
-@import './button.scss';
-@import './nav-bar.scss';
-@import './cell.scss';
-@import './tab.scss';
-@import './dialog.scss';
-@import './checkbox.scss';
-@import './switch.scss';
-@import './toast.scss';
-@import './upload.scss';
-@import './radio.scss';
+// @import './button.scss';
+// @import './nav-bar.scss';
+// @import './cell.scss';
+// @import './tab.scss';
+// @import './dialog.scss';
+// @import './checkbox.scss';
+// @import './switch.scss';
+// @import './toast.scss';
+// @import './upload.scss';
+// @import './radio.scss';
+@import './popup.scss';
 
 body,html,#app{
   color: $black;
