--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@
 @import './transition.scss';
 
 //ui
-// @import './button.scss';
+@import './button.scss';
 // @import './nav-bar.scss';
 // @import './cell.scss';
 // @import './tab.scss';
